release 3.0.0 - Upgrade to java 11, build changed to maven, provide osgi